syntax = "proto3";
import "types.proto";

package integration.grpc.hello;

option java_package = "org.springframework.integration.grpc.proto";

option java_multiple_files = true;

option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service HelloWorldService {

  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}

  // Sends a greeting and something else
  rpc StreamSayHello(HelloRequest) returns (stream HelloReply) {}

  // Sends a greeting to everyone presenting
  rpc HelloToEveryOne(stream HelloRequest) returns (HelloReply) {}

  // Streams requests and replies
  rpc BidiStreamHello(stream HelloRequest) returns (stream HelloReply) {}

}
